--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,8 @@
   ],
   "rules": {
     "@typescript-eslint/explicit-member-accessibility": "off",
+    "eol-last": "error",
+    "linebreak-style": ["error", "unix"],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   }
