--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
     "lint": "run-p lint:*"
   },
   "dependencies": {
+    "immer": "^2.1.1",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-app-polyfill": "^0.2.2",
+    "react-dom": "^16.8.4",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-first-router": "^2.1.1",
+    "redux-first-router-link": "^2.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/jest": "24.0.11",
-    "@types/node": "11.11.0",
+    "@types/node": "11.11.1",
     "@types/react": "16.8.7",
     "@types/react-dom": "16.8.2",
+    "@types/react-redux": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
     "eslint-config-prettier": "^4.1.0",
@@ -53,6 +62,10 @@
     ],
     "*.{md,html}": [
       "prettier --write",
+      "git add"
+    ],
+    "*.{png,jpeg,jpg,gif,svg}": [
+      "npx imagemin-lint-staged",
       "git add"
     ]
   },
